Use new texture

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ const OCEAN_SHADER = {
     "}"
   ].join("\n")
 };
-const waterImg = await _requestImage('./lib/img/water.png');
+const waterImg = await _requestImage('./lib/img/water.jpg');
 const texture = new THREE.Texture(
   waterImg,
   THREE.UVMapping,
