Major shader cleanup

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ function _makeOceanChunkGeometry(ox, oz) {
   for (let i = 0; i < numUvs; i++) {
     const baseIndex = i * 2;
     uvs[baseIndex + 0] *= UV_SCALE;
-    uvs[baseIndex + 1] *= UV_SCALE / NUM_FRAMES;
+    uvs[baseIndex + 1] *= UV_SCALE // / NUM_FRAMES;
   }
   const uvAttribute = new THREE.BufferAttribute(uvs, 2);
   geometry.setAttribute('uv', uvAttribute);
@@ -190,7 +190,7 @@ const OCEAN_SHADER = {
     },
     sunIntensity: {
       type: 'f',
-      value: 0,
+      value: 1,
     },
   },
   vertexShader: [
@@ -226,10 +226,13 @@ const OCEAN_SHADER = {
     "  float frame1 = mod(floor(animationFactor / 16.0), 1.0);",
     "  float frame2 = mod(frame1 + 1.0/16.0, 1.0);",
     "  float mixFactor = fract(animationFactor / 16.0) * 16.0;",
-    "  vec4 diffuseColor = mix(texture2D( map, vUv * vec2(1.0, 1.0 - frame1) ), texture2D( map, vUv * vec2(1.0, 1.0 - frame2) ), mixFactor);",
-    "  diffuseColor = vec4((0.2 + 0.8 * sunIntensity) * diffuseColor.xyz, 0.7);",
-    "  float fogFactor = whiteCompliment( exp2( - fogDensity * fogDensity * fogDepth * fogDepth * LOG2 ) );",
-    "  gl_FragColor = vec4(mix( diffuseColor.rgb, fogColor, fogFactor ), diffuseColor.a);",
+    // "  vec4 t = mix(texture2D( map, vUv * vec2(1.0, 1.0 - frame1) ), texture2D( map, vUv * vec2(1.0, 1.0 - frame2) ), mixFactor);",
+    "  vec4 t = texture2D( map, vUv );",
+    `  vec4 diffuseColor = vec4(t.rgb, 0.3);`,
+    // "  float tV = (t.r + t.g + t.b) / 3.0;",
+    // `  vec4 diffuseColor = vec4(vec3(${new THREE.Color(0x9fa8da).toArray().map(n => n.toFixed(8)).join(', ')}) * tV, 0.5);`,
+    // "  float fogFactor = whiteCompliment( exp2( - fogDensity * fogDensity * fogDepth * fogDepth * LOG2 ) );",
+    "  gl_FragColor = diffuseColor;",
     "}"
   ].join("\n")
 };
