--- a/index.html
+++ b/index.html
@@ -2,64 +2,16 @@
 <html>
 
 <head>
-  <title>xrpackage | trees</title>
-  <link rel=icon type="image/png" href="favicon.png">
-  <link href="index.css" rel=stylesheet>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/0735724151.js" crossorigin="anonymous"></script>
+  <title>ocean</title>
 </head>
 
-<body class="header-gap">
-  <header class=header id=header>
-    <a href="/" class="nav icon">山</a>
-    <nav class="selector nav bar" id=selector>
-      <i class="fa fa-solar-system head"></i>
-      <div class=header-label id=header-label>Terrain</div>
-      <i class="fa fa-chevron-down tail"></i>
-      <div class=selections id=selections>
-        <a href="run.html" class=selection id=run-mode>
-          <i class="fa fa-play"></i>
-          <div class=wrap>
-            <h3>Run mode</h3>
-            <p>Switch to run mode</p>
-          </div>
-        </a>
-        <a href="edit.html" class=selection id=edit-mode>
-          <i class="fa fa-pencil"></i>
-          <div class=wrap>
-            <h3>Edit mode</h3>
-            <p>You are currently editing this world</p>
-          </div>
-        </a>
-        <a href="browse.html" class="selection dim">
-          <i class="fa fa-solar-system"></i>
-          <div class=wrap>
-            <h3>Browse packages</h3>
-            <p>Explore the XRPackage registry</p>
-          </div>
-        </a>
-        <a href="help.html" class=selection>
-          <i class="fa fa-book"></i>
-          <div class=wrap>
-            <h3>Documentation</h3>
-            <p>Learn how to make packages and worlds</p>
-          </div>
-        </a>
-      </div>
-    </nav>
-  </header>
-
+<body>
 <script type=module>
 import * as THREE from './three.module.js';
 import {OrbitControls} from './OrbitControls.js';
 import murmur from './murmur.js';
 import {BufferGeometryUtils} from './BufferGeometryUtils.js';
-import {
-  NUM_CELLS,
-
-  NUM_CHUNKS_HEIGHT,
-  NUM_RENDER_GROUPS,
-} from './lib/constants/constants.js';
+import {NUM_CELLS} from './lib/constants/constants.js';
 
 const _requestImage = src => new Promise((accept, reject) => {
   const img = document.createElement('img');
@@ -159,7 +111,7 @@ function _makeOceanChunkGeometry(ox, oz) {
 
   // geometry.computeBoundingSphere();
   // const {boundingSphere} = geometry;
-  
+
   return geometry;
   /* return {
     positions,
@@ -278,7 +230,7 @@ scene.add(oceanObject);
 
 function animate() {
   orbitControls.update();
-  
+
   oceanMaterial.uniforms.worldTime.value = (Date.now() % (60*1000));
 
   renderer.render(scene, camera);
