--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <script type=module>
-import * as THREE from './three.module.js';
+import * as THREE from './three.module.min.js';
 import {OrbitControls} from './OrbitControls.js';
 import murmur from './murmur.js';
 import {BufferGeometryUtils} from './BufferGeometryUtils.js';
